Entrega3/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC
Rule 2     auxprogram -> vars auxprogram
Rule 3     auxprogram -> function auxprogram
Rule 4     auxprogram -> <empty>
Rule 5     array -> ID LFTBRACSQR exp RGTBRACSQR
Rule 6     arrayvalues -> LFTBRACSQR arrayvaluesaux RGTBRACSQR
Rule 7     arrayvaluesaux -> constant
Rule 8     arrayvaluesaux -> constant COMMA arrayvaluesaux
Rule 9     assignment -> assignmentaux EQUAL expression SEMICOLON
Rule 10    assignmentaux -> ID
Rule 11    assignmentaux -> array
Rule 12    blockreturn -> LFTBRAC blockneutral RGTBRAC
Rule 13    blockreturn -> LFTBRAC blockneutral RETURN exp SEMICOLON RGTBRAC
Rule 14    blockneutral -> statement blockneutral
Rule 15    blockneutral -> vars blockneutral
Rule 16    blockneutral -> empty
Rule 17    block -> LFTBRAC blockneutral RGTBRAC
Rule 18    condition -> IF conditionaux
Rule 19    condition -> IF conditionaux ELSE block
Rule 20    conditionaux -> LFTPAREN expression RGTPAREN block conditionaux2
Rule 21    conditionaux2 -> ELSEIF conditionaux
Rule 22    conditionaux2 -> empty
Rule 23    constant -> ID
Rule 24    constant -> array
Rule 25    constant -> cteN
Rule 26    constant -> cteS
Rule 27    constant -> TRUE
Rule 28    constant -> FALSE
Rule 29    constant -> call2
Rule 30    cteN -> FLOAT
Rule 31    cteN -> INT
Rule 32    cteS -> STRING
Rule 33    exp -> term
Rule 34    exp -> term PLUS exp
Rule 35    exp -> term MINUS exp
Rule 36    factor -> PLUS constant
Rule 37    factor -> MINUS constant
Rule 38    factor -> LFTPAREN expression RGTPAREN
Rule 39    factor -> constant
Rule 40    expression -> exp
Rule 41    expression -> exp expressionaux exp
Rule 42    expressionaux -> AND
Rule 43    expressionaux -> DOUBEQUAL
Rule 44    expressionaux -> NOT
Rule 45    expressionaux -> OR
Rule 46    expressionaux -> LESSTHANEQUAL
Rule 47    expressionaux -> GREATTHANEQUAL
Rule 48    expressionaux -> GREATTHAN
Rule 49    expressionaux -> LESSTHAN
Rule 50    loop -> WHILE LFTPAREN expression RGTPAREN block
Rule 51    write -> PRINT LFTPAREN constant RGTPAREN SEMICOLON
Rule 52    parameter -> type ID codeAddParameters
Rule 53    parameter -> type ID codeAddParameters COMMA parameter
Rule 54    parameter -> empty
Rule 55    term -> factor MULTIPLICATION term
Rule 56    term -> factor DIVISION term
Rule 57    term -> factor
Rule 58    statement -> assignment
Rule 59    statement -> condition
Rule 60    statement -> loop
Rule 61    statement -> write
Rule 62    statement -> read
Rule 63    statement -> call
Rule 64    type -> INT checkType
Rule 65    type -> FLOAT checkType
Rule 66    type -> CHAR checkType
Rule 67    type -> BOOL checkType
Rule 68    type -> STRING checkType
Rule 69    main -> PRIOMH codeScope block
Rule 70    function -> FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
Rule 71    functionaux -> VOID codeTypeVoid checkType
Rule 72    functionaux -> funcIndicator type
Rule 73    vars -> type varsaux
Rule 74    varsaux -> ID codeAddVar EQUAL expression SEMICOLON
Rule 75    varsaux -> ID codeAddVar EQUAL expression COMMA varsaux
Rule 76    varsaux -> ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
Rule 77    varsaux -> ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux
Rule 78    call -> ID LFTPAREN exp callaux RGTPAREN SEMICOLON
Rule 79    callaux -> COMMA exp callaux
Rule 80    callaux -> empty
Rule 81    call2 -> ID LFTPAREN exp callaux RGTPAREN
Rule 82    read -> READ LFTPAREN readaux RGTPAREN SEMICOLON
Rule 83    readaux -> ID
Rule 84    readaux -> array
Rule 85    empty -> <empty>
Rule 86    codeScope -> <empty>
Rule 87    checkType -> <empty>
Rule 88    codeAddVar -> <empty>
Rule 89    codeAddVarArreglo -> <empty>
Rule 90    codeAddParameters -> <empty>
Rule 91    codeNameOfFunct -> <empty>
Rule 92    codeTypeVoid -> <empty>
Rule 93    funcIndicator -> <empty>

Terminals, with rules where they appear

AND                  : 42
BOOL                 : 67
CHAR                 : 66
COMMA                : 8 53 75 77 79
DIVISION             : 56
DOUBEQUAL            : 43
ELSE                 : 19
ELSEIF               : 21
EQUAL                : 9 74 75 76 77
FALSE                : 28
FLOAT                : 30 65
FUNCTION             : 70
GREATTHAN            : 48
GREATTHANEQUAL       : 47
ID                   : 1 5 10 23 52 53 70 74 75 76 77 78 81 83
IF                   : 18 19
INT                  : 31 64 76 77
LESSTHAN             : 49
LESSTHANEQUAL        : 46
LFTBRAC              : 1 12 13 17
LFTBRACSQR           : 5 6 76 77
LFTPAREN             : 20 38 50 51 70 78 81 82
MINUS                : 35 37
MULTIPLICATION       : 55
NOT                  : 44
OR                   : 45
PLUS                 : 34 36
PRINT                : 51
PRIOMH               : 69
PROGRAM              : 1
READ                 : 82
RETURN               : 13
RGTBRAC              : 1 12 13 17
RGTBRACSQR           : 5 6 76 77
RGTPAREN             : 20 38 50 51 70 78 81 82
SEMICOLON            : 9 13 51 74 76 78 82
STRING               : 32 68
TRUE                 : 27
VOID                 : 71
WHILE                : 50
error                : 

Nonterminals, with rules where they appear

array                : 11 24 84
arrayvalues          : 76 77
arrayvaluesaux       : 6 8
assignment           : 58
assignmentaux        : 9
auxprogram           : 1 2 3
block                : 19 20 50 69
blockneutral         : 12 13 14 15 17
blockreturn          : 70
call                 : 63
call2                : 29
callaux              : 78 79 81
checkType            : 64 65 66 67 68 71
codeAddParameters    : 52 53
codeAddVar           : 74 75
codeAddVarArreglo    : 76 77
codeNameOfFunct      : 70
codeScope            : 69 70 70
codeTypeVoid         : 71
condition            : 59
conditionaux         : 18 19 21
conditionaux2        : 20
constant             : 7 8 36 37 39 51
cteN                 : 25
cteS                 : 26
empty                : 16 22 54 80
exp                  : 5 13 34 35 40 41 41 78 79 81
expression           : 9 20 38 50 74 75
expressionaux        : 41
factor               : 55 56 57
funcIndicator        : 72
function             : 3
functionaux          : 70
loop                 : 60
main                 : 1
parameter            : 53 70
program              : 0
read                 : 62
readaux              : 82
statement            : 14
term                 : 33 34 35 55 56
type                 : 52 53 72 73
vars                 : 2 15
varsaux              : 73 75 77
write                : 61

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LFTBRAC auxprogram main RGTBRAC

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LFTBRAC auxprogram main RGTBRAC

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LFTBRAC auxprogram main RGTBRAC

    LFTBRAC         shift and go to state 4


state 4

    (1) program -> PROGRAM ID LFTBRAC . auxprogram main RGTBRAC
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> .
    (73) vars -> . type varsaux
    (70) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (64) type -> . INT checkType
    (65) type -> . FLOAT checkType
    (66) type -> . CHAR checkType
    (67) type -> . BOOL checkType
    (68) type -> . STRING checkType

    PRIOMH          reduce using rule 4 (auxprogram -> .)
    FUNCTION        shift and go to state 5
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    function                       shift and go to state 9
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 8
    type                           shift and go to state 12

state 5

    (70) function -> FUNCTION . codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (86) codeScope -> .

    VOID            reduce using rule 86 (codeScope -> .)
    INT             reduce using rule 86 (codeScope -> .)
    FLOAT           reduce using rule 86 (codeScope -> .)
    CHAR            reduce using rule 86 (codeScope -> .)
    BOOL            reduce using rule 86 (codeScope -> .)
    STRING          reduce using rule 86 (codeScope -> .)

    codeScope                      shift and go to state 15

state 6

    (2) auxprogram -> vars . auxprogram
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> .
    (73) vars -> . type varsaux
    (70) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (64) type -> . INT checkType
    (65) type -> . FLOAT checkType
    (66) type -> . CHAR checkType
    (67) type -> . BOOL checkType
    (68) type -> . STRING checkType

    PRIOMH          reduce using rule 4 (auxprogram -> .)
    FUNCTION        shift and go to state 5
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    function                       shift and go to state 9
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 16
    type                           shift and go to state 12

state 7

    (66) type -> CHAR . checkType
    (87) checkType -> .

    ID              reduce using rule 87 (checkType -> .)

    checkType                      shift and go to state 17

state 8

    (1) program -> PROGRAM ID LFTBRAC auxprogram . main RGTBRAC
    (69) main -> . PRIOMH codeScope block

    PRIOMH          shift and go to state 18

    main                           shift and go to state 19

state 9

    (3) auxprogram -> function . auxprogram
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> .
    (73) vars -> . type varsaux
    (70) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (64) type -> . INT checkType
    (65) type -> . FLOAT checkType
    (66) type -> . CHAR checkType
    (67) type -> . BOOL checkType
    (68) type -> . STRING checkType

    PRIOMH          reduce using rule 4 (auxprogram -> .)
    FUNCTION        shift and go to state 5
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    function                       shift and go to state 9
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 20
    type                           shift and go to state 12

state 10

    (68) type -> STRING . checkType
    (87) checkType -> .

    ID              reduce using rule 87 (checkType -> .)

    checkType                      shift and go to state 21

state 11

    (64) type -> INT . checkType
    (87) checkType -> .

    ID              reduce using rule 87 (checkType -> .)

    checkType                      shift and go to state 22

state 12

    (73) vars -> type . varsaux
    (74) varsaux -> . ID codeAddVar EQUAL expression SEMICOLON
    (75) varsaux -> . ID codeAddVar EQUAL expression COMMA varsaux
    (76) varsaux -> . ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
    (77) varsaux -> . ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux

    ID              shift and go to state 23

    varsaux                        shift and go to state 24

state 13

    (65) type -> FLOAT . checkType
    (87) checkType -> .

    ID              reduce using rule 87 (checkType -> .)

    checkType                      shift and go to state 25

state 14

    (67) type -> BOOL . checkType
    (87) checkType -> .

    ID              reduce using rule 87 (checkType -> .)

    checkType                      shift and go to state 26

state 15

    (70) function -> FUNCTION codeScope . functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (71) functionaux -> . VOID codeTypeVoid checkType
    (72) functionaux -> . funcIndicator type
    (93) funcIndicator -> .

    VOID            shift and go to state 29
    INT             reduce using rule 93 (funcIndicator -> .)
    FLOAT           reduce using rule 93 (funcIndicator -> .)
    CHAR            reduce using rule 93 (funcIndicator -> .)
    BOOL            reduce using rule 93 (funcIndicator -> .)
    STRING          reduce using rule 93 (funcIndicator -> .)

    functionaux                    shift and go to state 27
    funcIndicator                  shift and go to state 28

state 16

    (2) auxprogram -> vars auxprogram .

    PRIOMH          reduce using rule 2 (auxprogram -> vars auxprogram .)


state 17

    (66) type -> CHAR checkType .

    ID              reduce using rule 66 (type -> CHAR checkType .)


state 18

    (69) main -> PRIOMH . codeScope block
    (86) codeScope -> .

    LFTBRAC         reduce using rule 86 (codeScope -> .)

    codeScope                      shift and go to state 30

state 19

    (1) program -> PROGRAM ID LFTBRAC auxprogram main . RGTBRAC

    RGTBRAC         shift and go to state 31


state 20

    (3) auxprogram -> function auxprogram .

    PRIOMH          reduce using rule 3 (auxprogram -> function auxprogram .)


state 21

    (68) type -> STRING checkType .

    ID              reduce using rule 68 (type -> STRING checkType .)


state 22

    (64) type -> INT checkType .

    ID              reduce using rule 64 (type -> INT checkType .)


state 23

    (74) varsaux -> ID . codeAddVar EQUAL expression SEMICOLON
    (75) varsaux -> ID . codeAddVar EQUAL expression COMMA varsaux
    (76) varsaux -> ID . codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
    (77) varsaux -> ID . codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux
    (88) codeAddVar -> .
    (89) codeAddVarArreglo -> .

    EQUAL           reduce using rule 88 (codeAddVar -> .)
    LFTBRACSQR      reduce using rule 89 (codeAddVarArreglo -> .)

    codeAddVarArreglo              shift and go to state 32
    codeAddVar                     shift and go to state 33

state 24

    (73) vars -> type varsaux .

    IF              reduce using rule 73 (vars -> type varsaux .)
    WHILE           reduce using rule 73 (vars -> type varsaux .)
    PRINT           reduce using rule 73 (vars -> type varsaux .)
    READ            reduce using rule 73 (vars -> type varsaux .)
    ID              reduce using rule 73 (vars -> type varsaux .)
    INT             reduce using rule 73 (vars -> type varsaux .)
    FLOAT           reduce using rule 73 (vars -> type varsaux .)
    CHAR            reduce using rule 73 (vars -> type varsaux .)
    BOOL            reduce using rule 73 (vars -> type varsaux .)
    STRING          reduce using rule 73 (vars -> type varsaux .)
    RGTBRAC         reduce using rule 73 (vars -> type varsaux .)
    RETURN          reduce using rule 73 (vars -> type varsaux .)
    FUNCTION        reduce using rule 73 (vars -> type varsaux .)
    PRIOMH          reduce using rule 73 (vars -> type varsaux .)


state 25

    (65) type -> FLOAT checkType .

    ID              reduce using rule 65 (type -> FLOAT checkType .)


state 26

    (67) type -> BOOL checkType .

    ID              reduce using rule 67 (type -> BOOL checkType .)


state 27

    (70) function -> FUNCTION codeScope functionaux . ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope

    ID              shift and go to state 34


state 28

    (72) functionaux -> funcIndicator . type
    (64) type -> . INT checkType
    (65) type -> . FLOAT checkType
    (66) type -> . CHAR checkType
    (67) type -> . BOOL checkType
    (68) type -> . STRING checkType

    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    type                           shift and go to state 35

state 29

    (71) functionaux -> VOID . codeTypeVoid checkType
    (92) codeTypeVoid -> .

    ID              reduce using rule 92 (codeTypeVoid -> .)

    codeTypeVoid                   shift and go to state 36

state 30

    (69) main -> PRIOMH codeScope . block
    (17) block -> . LFTBRAC blockneutral RGTBRAC

    LFTBRAC         shift and go to state 37

    block                          shift and go to state 38

state 31

    (1) program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC .

    $end            reduce using rule 1 (program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC .)


state 32

    (76) varsaux -> ID codeAddVarArreglo . LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
    (77) varsaux -> ID codeAddVarArreglo . LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux

    LFTBRACSQR      shift and go to state 39


state 33

    (74) varsaux -> ID codeAddVar . EQUAL expression SEMICOLON
    (75) varsaux -> ID codeAddVar . EQUAL expression COMMA varsaux

    EQUAL           shift and go to state 40


state 34

    (70) function -> FUNCTION codeScope functionaux ID . codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (91) codeNameOfFunct -> .

    LFTPAREN        reduce using rule 91 (codeNameOfFunct -> .)

    codeNameOfFunct                shift and go to state 41

state 35

    (72) functionaux -> funcIndicator type .

    ID              reduce using rule 72 (functionaux -> funcIndicator type .)


state 36

    (71) functionaux -> VOID codeTypeVoid . checkType
    (87) checkType -> .

    ID              reduce using rule 87 (checkType -> .)

    checkType                      shift and go to state 42

state 37

    (17) block -> LFTBRAC . blockneutral RGTBRAC
    (14) blockneutral -> . statement blockneutral
    (15) blockneutral -> . vars blockneutral
    (16) blockneutral -> . empty
    (58) statement -> . assignment
    (59) statement -> . condition
    (60) statement -> . loop
    (61) statement -> . write
    (62) statement -> . read
    (63) statement -> . call
    (73) vars -> . type varsaux
    (85) empty -> .
    (9) assignment -> . assignmentaux EQUAL expression SEMICOLON
    (18) condition -> . IF conditionaux
    (19) condition -> . IF conditionaux ELSE block
    (50) loop -> . WHILE LFTPAREN expression RGTPAREN block
    (51) write -> . PRINT LFTPAREN constant RGTPAREN SEMICOLON
    (82) read -> . READ LFTPAREN readaux RGTPAREN SEMICOLON
    (78) call -> . ID LFTPAREN exp callaux RGTPAREN SEMICOLON
    (64) type -> . INT checkType
    (65) type -> . FLOAT checkType
    (66) type -> . CHAR checkType
    (67) type -> . BOOL checkType
    (68) type -> . STRING checkType
    (10) assignmentaux -> . ID
    (11) assignmentaux -> . array
    (5) array -> . ID LFTBRACSQR exp RGTBRACSQR

    RGTBRAC         reduce using rule 85 (empty -> .)
    IF              shift and go to state 57
    WHILE           shift and go to state 45
    PRINT           shift and go to state 46
    READ            shift and go to state 44
    ID              shift and go to state 55
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    vars                           shift and go to state 43
    array                          shift and go to state 47
    write                          shift and go to state 48
    call                           shift and go to state 50
    statement                      shift and go to state 51
    type                           shift and go to state 12
    empty                          shift and go to state 52
    read                           shift and go to state 49
    assignment                     shift and go to state 53
    assignmentaux                  shift and go to state 54
    condition                      shift and go to state 56
    blockneutral                   shift and go to state 58
    loop                           shift and go to state 59

state 38

    (69) main -> PRIOMH codeScope block .

    RGTBRAC         reduce using rule 69 (main -> PRIOMH codeScope block .)


state 39

    (76) varsaux -> ID codeAddVarArreglo LFTBRACSQR . INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
    (77) varsaux -> ID codeAddVarArreglo LFTBRACSQR . INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux

    INT             shift and go to state 60


state 40
